// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ViewName/> .render() should display emoji 1`] = `
<span>
  <span
    class="emoji"
  >
    X
  </span>
  foo bar
</span>
`;

exports[`<ViewName/> .render() should display view name 1`] = `
<span>
  foo bar
</span>
`;

exports[`<ViewName/> .render() should not display emoji if decoration is not a string 1`] = `
<span>
  foo bar
</span>
`;
